Fixed link wrapping

--- a/client/src/main.css
+++ b/client/src/main.css
@@ -29,22 +29,21 @@ code {
 a {
   display: inline-block;
   position: relative;
-  text-decoration: underline;
-  text-decoration-thickness: 2px;
+  text-decoration: none;
   color: inherit;
   z-index: 1;
 }
 
-/*a::after {
+a::after {
   content: '';
   position: absolute;
   left: 0;
   bottom: .07em;
   height: .1em;
   width: 100%;
-  background: linear-gradient(90deg, #ffafde, #add0ff, #7ef3ff);
+  background:rgb(0,0,0);
   z-index: -1;
-} */
+}
 
 .horizontal {
   margin: auto;
